--- a/myCSS.css
+++ b/myCSS.css
@@ -11,7 +11,7 @@ body {
 	margin: 0 auto;
 }
 .header {
-	background: #4493F0#;
+	background: #869fb0#;
 	text-align: center;
 	margin: 0px;
 	padding: 5;
